--- a/community.css
+++ b/community.css
@@ -52,7 +52,16 @@ body {
     position: relative;
     display: inline-block;
 }
+.navbar .dropbtn i {
+    font-size: 20px;
+    vertical-align: middle;
+    margin-left: 5px;
+}
 
+.navbar .dropdown:hover .dropbtn i {
+    transform: rotate(180deg);
+    transition: transform 0.3s ease;
+}
 .dropbtn {
     border-radius: 5px;
     color: #ede9e9;
@@ -264,7 +273,9 @@ h3 {
 
 .footer-content ul {
     text-align: center;
+
 }
+
 
 .list li {
     width: 100px;
@@ -274,6 +285,16 @@ h3 {
     position: relative;
     color: gold;
 }
+.list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+    padding: 0;
+    margin: 0;
+    max-width: 200px;
+    margin-left: -15px;
+}
+
 
 .list li::before {
     content: "";
