--- a/roadmaps.css
+++ b/roadmaps.css
@@ -228,6 +228,16 @@ h3 {
     background-color: white;
     transition-duration: 5s;
 }
+.list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+    padding: 0;
+    margin: 0;
+    max-width: 200px;
+    margin-left: -15px;
+}
+
 .list a{
     color: #e8f0fe;
     margin-left: 10px;
