--- a/ebooks.css
+++ b/ebooks.css
@@ -188,7 +188,7 @@ body {
 footer{
     background-color: #14213d;
     background: e0e0e0;
-    padding-top: 50px;
+    padding-top: 30px;
     margin-top: 100px;
 }
 .container-1{
@@ -204,12 +204,14 @@ h3 {
     font-size: 28px;
     margin-bottom: 15px;
     color: royalblue;
+    margin-left: 120px;
 }
 .footer-content p{
     width: 360px;
     margin: auto;
     padding: 5px;
     color: #e5e5e5;
+    margin-left: 120px;
 }
 .footer-content ul{
     text-align: center;
@@ -229,7 +231,7 @@ h3 {
     padding: 0;
     margin: 0;
     max-width: 200px;
-    margin-left: -15px;
+    margin-left: 75px;
 }
 
 .list li::before{
@@ -253,7 +255,7 @@ h3 {
 .social-icons{
     text-align: center;
     padding: 0;
-    margin-left: -250px;
+    margin-left: 20px;
     
 }
 .social-icons li{
@@ -289,11 +291,7 @@ a:hover{
 .footer-content img{
     width: 100px;
     height: auto;
-    margin-left: ;
-    
-    width: 180px;
-    height: 120px;
-
-    
-    
+    display: block;
+    margin-left: 150PX;
+     
 }
